--- a/TurleSharp/TurleSharp.fsproj
+++ b/TurleSharp/TurleSharp.fsproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <None Include="Script1.fsx" />
     <Compile Include="TurtleTypes.fs" />
+    <Compile Include="Turtle.fs" />
     <Compile Include="TurtleTests.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
