--- a/TurleSharp/TurleSharp.fsproj
+++ b/TurleSharp/TurleSharp.fsproj
@@ -58,9 +58,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Script1.fsx" />
+    <Compile Include="Dragon.fs" />
     <Compile Include="TurtleTypes.fs" />
     <Compile Include="Turtle.fs" />
     <Compile Include="TurtleTests.fs" />
+    <Compile Include="Canvas.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <None Include="packages.config" />
