--- a/TurleSharp/TurleSharp.fsproj
+++ b/TurleSharp/TurleSharp.fsproj
@@ -38,6 +38,10 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Collections.ParallelSeq">
+      <HintPath>..\packages\FSharp.Collections.ParallelSeq.1.0.2\lib\net40\FSharp.Collections.ParallelSeq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FsUnit.NUnit">
       <HintPath>..\packages\FsUnit.1.3.0.1\Lib\Net40\FsUnit.NUnit.dll</HintPath>
       <Private>True</Private>
@@ -57,12 +61,13 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Script1.fsx" />
+    <None Include="Script2.fsx" />
+    <None Include="DragonScript.fsx" />
     <Compile Include="Dragon.fs" />
     <Compile Include="TurtleTypes.fs" />
+    <Compile Include="Canvas.fs" />
     <Compile Include="Turtle.fs" />
     <Compile Include="TurtleTests.fs" />
-    <Compile Include="Canvas.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <None Include="packages.config" />
