- Save canvas now takes a filename to use as a filename prefix.  - Kockcurve now draws a line for 'depth 0'.  - Added an API to move the turtles position.  - Added a sample FSX script to show how draw a sample image with the turtle.

--- a/TurleSharp/TurleSharp.fsproj
+++ b/TurleSharp/TurleSharp.fsproj
@@ -64,6 +64,7 @@
     <None Include="Script2.fsx" />
     <None Include="DragonScript.fsx" />
     <None Include="KockCurve.fsx" />
+    <None Include="TurlteTest.fsx" />
     <Compile Include="Dragon.fs" />
     <Compile Include="TurtleTypes.fs" />
     <Compile Include="Canvas.fs" />
